objects/pw_cc__Country__c.object
<CustomObject>
    <description>Pre v1.7 Country object now deprecated to allow for new features, please migrate your data to the new Country object and disregard.</description>
    <fields>
        <fullName>pw_cc__AllowOnlyListedStates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to “Yes” and there are no sub-countries for the specified country then this setting will be ignored.</description>
        <label>Allow only listed States</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__AlternativeNames__c</fullName>
        <inlineHelpText>Enter each alternative name with a pipe (&quot; | &quot;) inbetween</inlineHelpText>
        <label>Alternative Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this country used in this system.</description>
        <inlineHelpText>Determines whether the field appears as a completion-item on menus</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__Iso31662Code__c</fullName>
        <label>ISO 3166-2 Code</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__Iso31663Code__c</fullName>
        <label>ISO 3166-3 Code</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__StateIsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to “Yes” then NULL value of State is not Allowed for this Country</description>
        <label>State is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__TrimmedName__c</fullName>
        <description>Takes the first 40 characters of the country name which ensures the right length for inserting into standard country fields. Last spaces should be trimmed</description>
        <formula>TRIM ( LEFT( Name, 40 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trimmed Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__UseSubcountryCodeInStateField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to “Yes” then when the user selects “United States” and “Ohio” then we store [SubCountry].[Code] “OH” in the State field.
If value is “No” then we store the [SubCountry].[Name] – “Ohio”</description>
        <inlineHelpText>When enabled the State field is completed with the Sub-country ISO Code value.  Otherwise the sub-country Name value is used.</inlineHelpText>
        <label>Use Subcountry Code in State field</label>
        <type>Checkbox</type>
    </fields>
    <label>Country (obsolete)</label>
    <listViews>
        <fullName>pw_cc__All</fullName>
        <columns>pw_cc__Iso31662Code__c</columns>
        <columns>NAME</columns>
        <columns>pw_cc__StateIsMandatory__c</columns>
        <columns>pw_cc__UseSubcountryCodeInStateField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Countries</label>
    </listViews>
    <listViews>
        <fullName>pw_cc__CountriesWithMandatoryStates</fullName>
        <columns>pw_cc__Iso31662Code__c</columns>
        <columns>NAME</columns>
        <columns>pw_cc__StateIsMandatory__c</columns>
        <columns>pw_cc__UseSubcountryCodeInStateField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pw_cc__StateIsMandatory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Countries with Mandatory States</label>
    </listViews>
    <listViews>
        <fullName>pw_cc__VisibleCountries</fullName>
        <columns>pw_cc__Iso31662Code__c</columns>
        <columns>NAME</columns>
        <columns>pw_cc__StateIsMandatory__c</columns>
        <columns>pw_cc__UseSubcountryCodeInStateField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pw_cc__Enabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Visible Countries</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries  (obsolete)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>